{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 72,
  "lineage": "8a631c5d-a630-d272-54d5-8295535d097c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09515841ea0438851",
            "association_id": "eipassoc-04944481d25392995",
            "domain": "vpc",
            "id": "eipalloc-09515841ea0438851",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0601381c66a37e278",
            "private_dns": "ip-10-0-101-43.ec2.internal",
            "private_ip": "10.0.101.43",
            "public_dns": "ec2-3-231-245-0.compute-1.amazonaws.com",
            "public_ip": "3.231.245.0",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a1a88725a7cf508",
            "association_id": "eipassoc-08edceb229be61bab",
            "domain": "vpc",
            "id": "eipalloc-08a1a88725a7cf508",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0181d964d2f1898b1",
            "private_dns": "ip-10-0-102-86.ec2.internal",
            "private_ip": "10.0.102.86",
            "public_dns": "ec2-54-152-221-189.compute-1.amazonaws.com",
            "public_ip": "54.152.221.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:internet-gateway/igw-00455d8a0276adf45",
            "id": "igw-00455d8a0276adf45",
            "owner_id": "883963089724",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca21c63d4a73b91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09515841ea0438851",
            "connectivity_type": "public",
            "id": "nat-0373ec2e8cc5c7ee6",
            "network_interface_id": "eni-0601381c66a37e278",
            "private_ip": "10.0.101.43",
            "public_ip": "3.231.245.0",
            "subnet_id": "subnet-06686d2a4cfa9dec6",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08a1a88725a7cf508",
            "connectivity_type": "public",
            "id": "nat-07b4d6c0cbc624b82",
            "network_interface_id": "eni-0181d964d2f1898b1",
            "private_ip": "10.0.102.86",
            "public_ip": "54.152.221.189",
            "subnet_id": "subnet-0ef16286d0527edf1",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f90d5cc0697ac18a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0373ec2e8cc5c7ee6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f90d5cc0697ac18a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b2e8dcbbc39bc01a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07b4d6c0cbc624b82",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2e8dcbbc39bc01a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00455d8a0276adf45",
            "id": "r-rtb-02c4d6dac572ca98a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c4d6dac572ca98a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:route-table/rtb-0f90d5cc0697ac18a",
            "id": "rtb-0f90d5cc0697ac18a",
            "owner_id": "883963089724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0373ec2e8cc5c7ee6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-private-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-private-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bca21c63d4a73b91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:route-table/rtb-0b2e8dcbbc39bc01a",
            "id": "rtb-0b2e8dcbbc39bc01a",
            "owner_id": "883963089724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07b4d6c0cbc624b82",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-private-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-private-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bca21c63d4a73b91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:route-table/rtb-02c4d6dac572ca98a",
            "id": "rtb-02c4d6dac572ca98a",
            "owner_id": "883963089724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00455d8a0276adf45",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-public",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-public",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bca21c63d4a73b91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08192b0af6073ecea",
            "route_table_id": "rtb-0f90d5cc0697ac18a",
            "subnet_id": "subnet-0f7be83ce4d1f057f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1220709b8201df9",
            "route_table_id": "rtb-0b2e8dcbbc39bc01a",
            "subnet_id": "subnet-0a802adc9d9f45d0e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cea1b8145e2662f",
            "route_table_id": "rtb-02c4d6dac572ca98a",
            "subnet_id": "subnet-06686d2a4cfa9dec6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0239ca7f37d8f3a4b",
            "route_table_id": "rtb-02c4d6dac572ca98a",
            "subnet_id": "subnet-0ef16286d0527edf1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:subnet/subnet-0f7be83ce4d1f057f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7be83ce4d1f057f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883963089724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-private-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-private-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca21c63d4a73b91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:subnet/subnet-0a802adc9d9f45d0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a802adc9d9f45d0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "883963089724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-private-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-private-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca21c63d4a73b91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:subnet/subnet-06686d2a4cfa9dec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06686d2a4cfa9dec6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883963089724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-public-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-public-us-east-1a",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca21c63d4a73b91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:subnet/subnet-0ef16286d0527edf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef16286d0527edf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "883963089724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-public-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc-public-us-east-1b",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0bca21c63d4a73b91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:883963089724:vpc/vpc-0bca21c63d4a73b91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f91b9368d4914fd4",
            "default_route_table_id": "rtb-023bfee5a718a6c02",
            "default_security_group_id": "sg-0ca8c6a230a5f16a0",
            "dhcp_options_id": "dopt-050964a1432dc1059",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bca21c63d4a73b91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-023bfee5a718a6c02",
            "owner_id": "883963089724",
            "tags": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            },
            "tags_all": {
              "CC": "19931204",
              "Environment": "Production",
              "Name": "vorx-prod-vpc",
              "OwnerSRE": "Konoha",
              "Team": "Impact Devops",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}